# rrr-demo

./: .gitignore  03-here.R  04-git.R  04-renv.R  06-targets.R  07-pointblank.R  README.md  _targets.R  py_penguins.ipynb  py_penguins.qmd  quarto-pdf.qmd  quarto-typst.qmd  quarto.qmd  reprex.R  seed.R
03-document/: pyproject.toml  quarto-typst.qmd  quarto.qmd
_targets/meta/: meta
data/: predictions.csv
src/: dependencies.R  functions.R
