[tool.poetry]
name = "rrr-demo"
version = "0.1.0"
description = ""
authors = ["Shinya Uryu <r.sh1nya.uryu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "=3.12.5"
jupyter = "^1.0.0"
jupyterlab = "^4.2.5"
seaborn = "^0.13.2"
jupytext = "^1.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
